--- a/TEST/sample.css
+++ b/TEST/sample.css
@@ -580,6 +580,13 @@ button {
     white-space: nowrap;
 }
 
+#preview {
+      max-width:100%; 
+  max-height:100%;
+  margin:auto;
+  display:block;
+}
+
 .btn_blue_l {
     float: left;
     background: url(../../images/egovframework/example/btn_bg_l.gif) 0 0 no-repeat;
