--- a/com.yummy/src/main/webapp/css/egovframework/sample.css
+++ b/com.yummy/src/main/webapp/css/egovframework/sample.css
@@ -8,6 +8,7 @@
 * {margin:0;padding:0;}
 * html {height:1px;}
 body {margin:0; padding:0; font-family:"굴림"; font-size:12px; color:#666; scroll:auto;}
+table {/* width="100%" border="1" cellpadding="0" cellspacing="0" style=" */bordercolor: #D3E2EC; bordercolordark: #FFFFFF; BORDER-TOP: #C2D0DB 2px solid; BORDER-LEFT: #ffffff 1px solid; BORDER-RIGHT: #ffffff 1px solid; BORDER-BOTTOM: #C2D0DB 1px solid; border-collapse: collapse; margin: auto; text-align: center;}
 table, tr, td, th {font-family:"돋움"; font-size:11px; color:#333333;}
 .listtd {padding:10px 5px 8px 5px; border-bottom:1px solid #e5e5e5;}
 th {background-color:#F3F5E0; background:url(../../images/egovframework/example/th_bg.gif) 0 0 repeat; height:26px; text-align:center; vertical-align:middle; color:#003366;}
@@ -86,7 +87,7 @@ a:hover { font-size:11px; font-family:"돋움"; color:#339999; text-decoration:n
 #idwrap {float:left; padding-top:0px; padding-bottom:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; margin-top:0px; padding-left:0px; padding-right:0px; }
 #idwrap ul {float:left; padding:0; margin:0;}
 #idwrap li {list-style-type:none; float:left; margin:0; padding-right:3px;}
-button {cursor:hand; border:0px solid #FFFFFF; padding:0px 0px 0px 0px; background-color:#FFFFFF; white-space:nowrap;}
+button {padding: 0px 10px; white-space:nowrap;}
 .btn_blue_l {float:left; background:url(../../images/egovframework/example/btn_bg_l.gif) 0 0 no-repeat; height:20px; padding:0px 0px 0px 10px; margin:0px 0px 0px 0px;}
 .btn_blue_r {float:left; background:url(../../images/egovframework/example/btn_bg_r.gif) 0 0 no-repeat; background-position:right; height:20px; font-family:"돋움"; font-size:11px; color:#000000; margin:0px 0px 0px 0px; padding-top:0px; _padding-top:0px; padding-left:10px; padding-right:10px; padding-bottom:0px; text-align:center;}
 input { height:20px; font-family:"돋움"; font-size:12px; color:#000000; padding:2px 2px 0px 2px; margin-top:0px; _margin-top:-1px;}
@@ -97,3 +98,4 @@ select {font-family:'돋움'; font-size:12px; margin-top:0px; height:20px; paddi
 .tbtd_content_re {background-color:#F9F9F2; padding:7px 10px 5px 10px; margin:0;}
 input.txt               {height:18px; background-color:#FFF; border:1px solid #BCC8D8; padding-top:2px; color:#5e5e5e; cursor:text;}
 input.essentiality  {height:18px; background-color:#ebebeb; border:1px solid #BCC8D8; padding-top:2px; color:#000; cursor:text;}
+#catag_no {width: 145px;}
