--- a/com.yummy/src/main/webapp/css/egovframework/modal.css
+++ b/com.yummy/src/main/webapp/css/egovframework/modal.css
@@ -7,7 +7,7 @@
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  /*height: 100%; */
   overflow: auto;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
@@ -33,3 +33,24 @@
   text-decoration: none;
   cursor: pointer;
 }
+
+#cont {
+  height: 600px;
+  width: 500px;
+/*   resize: none; */
+}
+
+.modal_content * {
+  border: none;  /* 1px solid black; */
+  
+}
+
+.modal_content input {
+  width: 200px;
+}
+
+.rvw_dtl {
+  text-align: left;
+}
+
+
