--- a/MyApplication/app/src/main/res/layout/card_row.xml
+++ b/MyApplication/app/src/main/res/layout/card_row.xml
@@ -12,22 +12,28 @@
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:orientation="vertical">
+
         <TextView
-            android:id="@+id/tv_name"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:textSize="18sp"
+            android:id="@+id/rst_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="asdf1020"
+            android:textSize="18sp"
             android:textStyle="bold" />
+
         <TextView
             android:id="@+id/tv_version"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="asdf1020" />
+
         <TextView
             android:id="@+id/tv_api_level"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="asdf1020" />
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
