--- a/com.yummy/src/main/webapp/css/egovframework/sample.css
+++ b/com.yummy/src/main/webapp/css/egovframework/sample.css
@@ -107,4 +107,4 @@ input.essentiality  {height:18px; background-color:#ebebeb; border:1px solid #BC
 .inner_container {margin: auto;}
 .rvw { cursor: pointer; height: 40px; border-bottom: 1px solid #5f01011f; }
 
-
+hr { margin: 20px; width: 900px; }
