--- a/ManagementAndroidStudies/app/src/main/res/layout/activity_main.xml
+++ b/ManagementAndroidStudies/app/src/main/res/layout/activity_main.xml
@@ -47,4 +47,10 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+
+    <Button
+        android:id="@+id/managementButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="회원 관리" />
 </LinearLayout>
