--- a/APP_EX/app/src/main/res/layout/card_row.xml
+++ b/APP_EX/app/src/main/res/layout/card_row.xml
@@ -1,11 +1,8 @@
-<android.support.v7.widget.CardView
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
+    android:layout_margin="5dp"
     card_view:cardCornerRadius="5dp">
 
     <LinearLayout
@@ -13,18 +10,21 @@
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/rst_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:textSize="18sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:textStyle="bold" />
+
         <TextView
             android:id="@+id/catag_nm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/rst_loc"
             android:layout_width="wrap_content"
