--- a/APP_EX/app/src/main/res/layout/rvw_card.xml
+++ b/APP_EX/app/src/main/res/layout/rvw_card.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/rst_name"
+            android:id="@+id/user_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -22,14 +22,19 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/catag_nm"
+            android:id="@+id/cont"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/rst_loc"
+            android:id="@+id/score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+        <TextView
+            android:id="@+id/cdt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
+
 </android.support.v7.widget.CardView>
