--- a/com.yummy/src/main/webapp/css/egovframework/modal.css
+++ b/com.yummy/src/main/webapp/css/egovframework/modal.css
@@ -7,7 +7,7 @@
   left: 0;
   top: 0;
   width: 100%;
-  /*height: 100%; */
+  height: 100%;
   overflow: auto;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
@@ -16,7 +16,7 @@
 /* 모달 안에 들어올 내용 */
 .modal_content {
   background-color: #fefefe;
-  margin: 15% auto; /* 화면상에서 15% 아래에 위치 하도록 */
+  margin: 5% auto; /* 화면상에서 5% 아래에 위치 하도록 */
   padding: 20px;
   border: 1px solid #888;
   width: 50%; /* 화면 싸이즈에 반크기 */
