--- a/APP_EX/app/src/main/res/layout-v26/activity_rvw_post.xml
+++ b/APP_EX/app/src/main/res/layout-v26/activity_rvw_post.xml
@@ -10,7 +10,7 @@
     tools:context=".Rvw.RvwPOST">
 
     <LinearLayout
-        android:id="@+id/headerContainer"
+        android:id="@+id/HeaderContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
@@ -38,7 +38,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/raterContainer"
+        android:id="@+id/RaterContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -77,19 +77,17 @@
         android:padding="5dp"
         android:text="@string/createRvw" />
 
-    <LinearLayout
-        android:id="@+id/BtnContainer"
+    <TableRow
+        android:id="@+id/ButtonContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:orientation="horizontal"
-        android:padding="5dp">
+        android:layout_marginTop="5dp"
+        android:layout_weight="0">
 
         <Button
             android:id="@+id/takePhoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:padding="10dp"
             android:text="@string/takePhoto"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
@@ -98,19 +96,30 @@
             android:id="@+id/loadPhoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:padding="10dp"
             android:text="@string/loadPhoto"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <ImageView
+            android:id="@+id/phot_preview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintVertical_weight="1"
+        />
 
         <Button
             android:id="@+id/submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:padding="10dp"
             android:text="@string/submit"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
-    </LinearLayout>
+    </TableRow>
 
 </LinearLayout>
