--- a/APP_EX/app/src/main/res/layout-v26/activity_rvw_post.xml
+++ b/APP_EX/app/src/main/res/layout-v26/activity_rvw_post.xml
@@ -57,7 +57,7 @@
                 android:orientation="horizontal">
 
                 <Space
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
 
@@ -71,10 +71,13 @@
                     android:rating="3"
                     android:stepSize="1" />
 
-                <Space
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/rateResult"
+                    android:layout_width="70dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="0"
+                    android:text="@string/soso" />
+
             </LinearLayout>
 
             <EditText
