--- a/APP_EX/app/src/main/res/xml/file_paths.xml
+++ b/APP_EX/app/src/main/res/xml/file_paths.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-path name="yummy_images" path="Android/data/com.example.app/files/Pictures" />
+    <!--
+    <external-path
+        name="yummy_images"
+        path="Android/data/com.example.app/files/Pictures" />
+    -->
+    <external-path
+        name="storage/emulated"
+        path="."/>
 </paths>
