--- a/APP_EX/app/src/main/res/layout-v26/activity_rvw_post.xml
+++ b/APP_EX/app/src/main/res/layout-v26/activity_rvw_post.xml
@@ -90,8 +90,7 @@
                 android:gravity="top"
                 android:hint="@string/createRvw"
                 android:inputType="textMultiLine"
-                android:padding="5dp"
-                android:text="@string/createRvw" />
+                android:padding="5dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
