--- a/com.yummy/src/main/webapp/css/egovframework/sample.css
+++ b/com.yummy/src/main/webapp/css/egovframework/sample.css
@@ -8,7 +8,7 @@
 * {margin:0;padding:0;}
 * html {height:1px;}
 body {margin:0; padding:0; font-family:"굴림"; font-size:12px; color:#666; scroll:auto;}
-table {/* width="100%" border="1" cellpadding="0" cellspacing="0" style=" */bordercolor: #D3E2EC; bordercolordark: #FFFFFF; BORDER-TOP: #C2D0DB 2px solid; BORDER-LEFT: #ffffff 1px solid; BORDER-RIGHT: #ffffff 1px solid; BORDER-BOTTOM: #C2D0DB 1px solid; border-collapse: collapse; margin: auto; text-align: center;}
+table {border-collapse: collapse; margin: auto; text-align: center; margin: 1em auto;}
 table, tr, td, th {font-family:"돋움"; font-size:11px; color:#333333;}
 .td_cont { background-color: #FFFFFF; border-top: 1px solid #CCEEFF; }
 .listtd {padding:10px 5px 8px 5px; border-bottom:1px solid #e5e5e5;}
@@ -58,7 +58,7 @@ a:hover { font-size:11px; font-family:"돋움"; color:#339999; text-decoration:n
 #sub .sub_menu_en dd {font-weight:bold; padding-left:0px; padding-right:0px; padding-bottom:0px; padding-top:10px; margin:0;}
 #sub .sub_menu_en dt {list-style:none;  padding-left:0px; padding-right:0px; padding-bottom:0px; padding-top:8px; margin:0px;}
 #content {float:left; text-align:left; /*overflow:hidden;*/width:680px; background-color:#FFFFFF; padding:10px 0px 10px 0px;}
-#content_pop {float:left; text-align:left; /*overflow:hidden;*/width:680px; background-color:#FFFFFF; padding:10px 10px 10px 10px;}
+#content_pop {float:left; text-align:left; /*overflow:hidden;*//* width:680px; */ background-color:#FFFFFF; padding:10px 10px 10px 10px;}
 #title {float:left; text-align:left; margin:0 0 10 0; padding:0; height:30px; border-bottom:1px solid #e5e5e5; width:680px;}
 #title ul {float:left; margin:0; padding:0;}
 #title li {list-style-type:none; width:200px; padding:3px 0px 2px 0px; float:left; font-family:"돋움"; font-size:16px; font-weight:bold; color:#000000;}
@@ -103,11 +103,11 @@ input.essentiality  {height:18px; background-color:#ebebeb; border:1px solid #BC
 
 
 #catag_no {width: 145px;}
-.outter_container {width: 900px;}
-.inner_container {margin: auto;}
+.outter_container {min-height: 1090px; position: relative;}
+.inner_container {margin: 2em 15em;}
 .rvw { cursor: pointer; height: 40px; border-bottom: 1px solid #5f01011f; }
 
-hr { margin: 20px; width: 900px; }
+hr { margin: 2em 10em; width: 90%; }
 #preview { width: 250px; height: 250px; border: 1px solid #bcbcbc; background-size: cover; background-position: center;}
 #img_label { border: 1px solid silver; padding: 2px 10px; border-radius: 3px; }
 #img_input { display: none; }
