--- a/com.yummy/src/main/webapp/css/egovframework/sample.css
+++ b/com.yummy/src/main/webapp/css/egovframework/sample.css
@@ -96,15 +96,15 @@ select { height:20px; font-family:"돋움"; font-size:12px; color:#000000; paddi
 /* select {font-family:'돋움'; font-size:12px; margin-top:0px; height:20px; padding-top:0px;} */
 .tbtd_caption {font-weight:bold; color:#003366; background-color:#E5EDF3; text-align:right; padding:10px 10px 9px 5px; margin:0;}
 .tbtd_content {background-color:#F5F8FA; padding:7px 10px 5px 10px; margin:0;}
-.tbtd_caption_re {font-weight:bold; color:#666633; background-color:#F6F5E5; text-align:right; padding:10px 10px 9px 5px; margin:0;}
+.tbtd_caption_re {font-weight:bold; color:#666633; background-color:#fefefe; text-align:right; padding:10px 10px 9px 5px; margin:0;}
 .tbtd_content_re {background-color:#F9F9F2; padding:7px 10px 5px 10px; margin:0;}
 input.txt               {height:18px; background-color:#FFF; border:1px solid #BCC8D8; padding-top:2px; color:#5e5e5e; cursor:text;}
 input.essentiality  {height:18px; background-color:#ebebeb; border:1px solid #BCC8D8; padding-top:2px; color:#000; cursor:text;}
 
 
 #catag_no {width: 145px;}
-.outter_container {min-height: 1090px; position: relative;}
-.inner_container {margin: 2em 15em;}
+.outter_container {min-height: 800px; position: relative;}
+.inner_container {  }
 .rvw { cursor: pointer; height: 40px; border-bottom: 1px solid #5f01011f; }
 
 hr { margin: 2em 10em; width: 90%; }
