--- a/APP_EX/app/src/main/res/layout/activity_main.xml
+++ b/APP_EX/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <Button
+        android:id="@+id/filterBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/filter" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/card_recycler_view"
