--- a/APP_EX/app/src/main/res/layout/activity_rvw_detail.xml
+++ b/APP_EX/app/src/main/res/layout/activity_rvw_detail.xml
@@ -16,7 +16,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/rst_name"
+            android:id="@+id/rst_name_val"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
