--- a/com.yummy/src/main/webapp/css/egovframework/modal.css
+++ b/com.yummy/src/main/webapp/css/egovframework/modal.css
@@ -36,8 +36,8 @@
 }
 
 #cont {
-  height: 400px;
   width: 500px;
+  /* height: 400px; */
 /*   resize: none; */
 }
 
@@ -56,7 +56,7 @@
 
 #rvw_phot {
   width:500px;
-  height:500px;
+  /* height:500px; */
 }
 
 
