--- a/APP_EX/app/src/main/res/layout/activity_rst_detail.xml
+++ b/APP_EX/app/src/main/res/layout/activity_rst_detail.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rst_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
@@ -109,14 +109,20 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/rst_tm_info"
+                android:id="@+id/rst_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="vertical">
 
+                <Button
+                    android:id="@+id/menuBTN"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/show_menu" />
+
                 <TextView
-                    android:id="@+id/rst_info"
+                    android:id="@+id/rst_tm_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
